--- a/account-notifications.html
+++ b/account-notifications.html
@@ -1700,7 +1700,7 @@
                                             class="form-floating__control"
                                             for="notification-settings-active-phone-chooser"
                                             ><div class="form-floating__label">
-                                              <div class="_11hx67x">
+                                              <div class="spinner-chart__input-title-text">
                                                 Choose a phone number
                                               </div>
                                             </div>
@@ -2404,7 +2404,7 @@
                             type="button"
                             class="form__switch--checked"
                           >
-                            <div class="_16g1cyy8">
+                            <div class="form__switch-toggle-checked">
                               <svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -2453,7 +2453,7 @@
                             type="button"
                             class="form__switch"
                           >
-                            <div class="_vr1ztso"></div>
+                            <div class="form__switch-toggle"></div>
                           </button>
                         </div>
                       </div>
@@ -2483,7 +2483,7 @@
                             type="button"
                             class="form__switch"
                           >
-                            <div class="_vr1ztso"></div>
+                            <div class="form__switch-toggle"></div>
                           </button>
                         </div>
                       </div>
@@ -2513,7 +2513,7 @@
                             type="button"
                             class="form__switch"
                           >
-                            <div class="_vr1ztso"></div>
+                            <div class="form__switch-toggle"></div>
                           </button>
                         </div>
                       </div>
