--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -289,7 +289,7 @@
                                               <div class="_9hxttoo">
                                                 <div style="margin-bottom: 8px">
                                                   <label
-                                                    class="_rin72m"
+                                                    class="explore-filter-menu__group-size-label"
                                                     for="a4w-settings-email-input"
                                                     ><div class="_1p3joamp">
                                                       Work email address
@@ -711,7 +711,7 @@
                                             <div class="_9hxttoo">
                                               <div style="margin-bottom: 8px">
                                                 <label
-                                                  class="_rin72m"
+                                                  class="explore-filter-menu__group-size-label"
                                                   for="a4w-settings-email-input"
                                                   ><div class="_1p3joamp">
                                                     Work email address
