--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -258,7 +258,7 @@
                                             </div>
                                           </div>
                                           <label
-                                            class="_1yw7hpv"
+                                            class="input-field"
                                             for="searchable-address-search"
                                           >
                                             <div dir="ltr">
