--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -405,7 +405,7 @@
                                 <div class="_ia55b">
                                   <div class="_1h4ezu9">
                                     <label
-                                      class="_1yw7hpv"
+                                      class="input-field"
                                       for="undefined-input"
                                       ><span class="text-highlight dir dir-ltr"
                                         >price per night</span
