--- a/edit/bring.html
+++ b/edit/bring.html
@@ -471,17 +471,17 @@
                                             listing each item separately.
                                           </p>
                                           <div class="_1d5136v">
-                                            <div class="_1jj61m9">
+                                            <div class="spinner-chart__input-price">
                                               <label
-                                                class="_1yw7hpv"
+                                                class="input-field"
                                                 for="packing-item-0"
-                                                ><div class="_1m2ich98">
-                                                  <div class="_11hx67x">
+                                                ><div class="spinner-chart__input-title">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Item
                                                   </div>
                                                 </div>
                                                 <div dir="ltr">
-                                                  <div class="_fywymp7">
+                                                  <div class="spinner-chart__input-currency">
                                                     <input
                                                       data-testid="packing-item-0"
                                                       class="form__input"
@@ -531,17 +531,17 @@
                                             </div>
                                           </div>
                                           <div class="_1d5136v">
-                                            <div class="_1jj61m9">
+                                            <div class="spinner-chart__input-price">
                                               <label
-                                                class="_1yw7hpv"
+                                                class="input-field"
                                                 for="packing-item-1"
-                                                ><div class="_1m2ich98">
-                                                  <div class="_11hx67x">
+                                                ><div class="spinner-chart__input-title">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Item
                                                   </div>
                                                 </div>
                                                 <div dir="ltr">
-                                                  <div class="_fywymp7">
+                                                  <div class="spinner-chart__input-currency">
                                                     <input
                                                       data-testid="packing-item-1"
                                                       class="form__input"
@@ -591,17 +591,17 @@
                                             </div>
                                           </div>
                                           <div class="_1d5136v">
-                                            <div class="_1jj61m9">
+                                            <div class="spinner-chart__input-price">
                                               <label
-                                                class="_1yw7hpv"
+                                                class="input-field"
                                                 for="packing-item-2"
-                                                ><div class="_1m2ich98">
-                                                  <div class="_11hx67x">
+                                                ><div class="spinner-chart__input-title">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Item
                                                   </div>
                                                 </div>
                                                 <div dir="ltr">
-                                                  <div class="_fywymp7">
+                                                  <div class="spinner-chart__input-currency">
                                                     <input
                                                       data-testid="packing-item-2"
                                                       class="form__input"
@@ -651,17 +651,17 @@
                                             </div>
                                           </div>
                                           <div class="_1d5136v">
-                                            <div class="_1jj61m9">
+                                            <div class="spinner-chart__input-price">
                                               <label
-                                                class="_1yw7hpv"
+                                                class="input-field"
                                                 for="packing-item-3"
-                                                ><div class="_1m2ich98">
-                                                  <div class="_11hx67x">
+                                                ><div class="spinner-chart__input-title">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Item
                                                   </div>
                                                 </div>
                                                 <div dir="ltr">
-                                                  <div class="_fywymp7">
+                                                  <div class="spinner-chart__input-currency">
                                                     <input
                                                       data-testid="packing-item-3"
                                                       class="form__input"
@@ -711,17 +711,17 @@
                                             </div>
                                           </div>
                                           <div class="_1d5136v">
-                                            <div class="_1jj61m9">
+                                            <div class="spinner-chart__input-price">
                                               <label
-                                                class="_1yw7hpv"
+                                                class="input-field"
                                                 for="packing-item-4"
-                                                ><div class="_1m2ich98">
-                                                  <div class="_11hx67x">
+                                                ><div class="spinner-chart__input-title">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Item
                                                   </div>
                                                 </div>
                                                 <div dir="ltr">
-                                                  <div class="_fywymp7">
+                                                  <div class="spinner-chart__input-currency">
                                                     <input
                                                       data-testid="packing-item-4"
                                                       class="form__input"
@@ -771,17 +771,17 @@
                                             </div>
                                           </div>
                                           <div class="_1d5136v">
-                                            <div class="_1jj61m9">
+                                            <div class="spinner-chart__input-price">
                                               <label
-                                                class="_1yw7hpv"
+                                                class="input-field"
                                                 for="packing-item-5"
-                                                ><div class="_1m2ich98">
-                                                  <div class="_11hx67x">
+                                                ><div class="spinner-chart__input-title">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Item
                                                   </div>
                                                 </div>
                                                 <div dir="ltr">
-                                                  <div class="_fywymp7">
+                                                  <div class="spinner-chart__input-currency">
                                                     <input
                                                       data-testid="packing-item-5"
                                                       class="form__input"
