--- a/edit/what.html
+++ b/edit/what.html
@@ -489,7 +489,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 class="form-floating__control"
                                                 for="DURATION"
                                                 ><div class="form-floating__label">
-                                                  <div class="_11hx67x">
+                                                  <div class="spinner-chart__input-title-text">
                                                     Duration
                                                   </div>
                                                 </div>
