--- a/gift.html
+++ b/gift.html
@@ -230,10 +230,10 @@
                               <div class="f6lqz6r dir dir-ltr">
                                 <div style="margin-top: 48px">
                                   <div>
-                                    <div class="_1jj61m9">
-                                      <label class="_1yw7hpv" for="gift_pin">
+                                    <div class="spinner-chart__input-price">
+                                      <label class="input-field" for="gift_pin">
                                         <div class="_1jn0ze9">
-                                          <div class="_11hx67x">PIN</div>
+                                          <div class="spinner-chart__input-title-text">PIN</div>
                                         </div>
                                         <div dir="ltr">
                                           <div class="_js9i23">
