--- a/inbox.html
+++ b/inbox.html
@@ -1531,7 +1531,7 @@
         margin-right: 8px !important;
         padding: 0px !important;
       }
-      ._1yw7hpv {
+      .input-field {
         position: relative !important;
         -webkit-flex: 1 !important;
         -ms-flex: 1 1 0% !important;
@@ -7686,7 +7686,7 @@
                                           </svg>
                                         </div>
                                         <label
-                                          class="_1yw7hpv"
+                                          class="input-field"
                                           for="inbox-query"
                                           ><div dir="ltr">
                                             <div class="flex">
@@ -8740,7 +8740,7 @@
                                   </div>
                                   <div class="_1lnubva"></div>
                                 </div>
-                                <div class="_1eaes69">
+                                <div class="explore-filter-menu__group-size-option">
                                   <div class="_fsdsdp">
                                     <div class="_1t4xagw">
                                       <div class="_1icr19o" style="width: 96px">
