--- a/login-security.html
+++ b/login-security.html
@@ -353,7 +353,7 @@
                                                       style="margin-bottom: 8px"
                                                     >
                                                       <label
-                                                        class="_rin72m"
+                                                        class="explore-filter-menu__group-size-label"
                                                         for="old_password"
                                                         ><div class="_czm8crp">
                                                           Current password
@@ -389,7 +389,7 @@
                                                       style="margin-bottom: 8px"
                                                     >
                                                       <label
-                                                        class="_rin72m"
+                                                        class="explore-filter-menu__group-size-label"
                                                         for="user[password]"
                                                         ><div class="_czm8crp">
                                                           New password
@@ -415,7 +415,7 @@
                                                       style="margin-bottom: 8px"
                                                     >
                                                       <label
-                                                        class="_rin72m"
+                                                        class="explore-filter-menu__group-size-label"
                                                         for="user[password_confirmation]"
                                                         ><div class="_czm8crp">
                                                           Confirm password
@@ -1488,7 +1488,7 @@
                                                         "
                                                       >
                                                         <label
-                                                          class="_rin72m"
+                                                          class="explore-filter-menu__group-size-label"
                                                           for="old_password"
                                                           ><div
                                                             class="_czm8crp"
@@ -1530,7 +1530,7 @@
                                                         "
                                                       >
                                                         <label
-                                                          class="_rin72m"
+                                                          class="explore-filter-menu__group-size-label"
                                                           for="user[password]"
                                                           ><div
                                                             class="_czm8crp"
@@ -1560,7 +1560,7 @@
                                                         "
                                                       >
                                                         <label
-                                                          class="_rin72m"
+                                                          class="explore-filter-menu__group-size-label"
                                                           for="user[password_confirmation]"
                                                           ><div
                                                             class="_czm8crp"
