--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -291,7 +291,7 @@
                                             <div class="_10ejfg4u">
                                               <div style="margin-right: 24px">
                                                 <label
-                                                  class="_rin72m"
+                                                  class="explore-filter-menu__group-size-label"
                                                   for="contributions-opt-out"
                                                   ><span
                                                     id="contributions-opt-out--label"
@@ -879,7 +879,7 @@
                                                       style="margin-right: 24px"
                                                     >
                                                       <label
-                                                        class="_rin72m"
+                                                        class="explore-filter-menu__group-size-label"
                                                         for="contributions-opt-out"
                                                         ><span
                                                           id="contributions-opt-out--label"
