--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -556,7 +556,7 @@
                                                             value="false"
                                                           />
                                                           <div
-                                                            class="_vr1ztso"
+                                                            class="form__switch-toggle"
                                                           ></div>
                                                         </button>
                                                       </div>
@@ -639,7 +639,7 @@
                                                             value="true"
                                                           />
                                                           <div
-                                                            class="_16g1cyy8"
+                                                            class="form__switch-toggle-checked"
                                                           >
                                                             <svg
                                                               viewBox="0 0 32 32"
@@ -1217,7 +1217,7 @@
                                                     name="includeInSearchEngines-switch"
                                                     value="false"
                                                   />
-                                                  <div class="_vr1ztso"></div>
+                                                  <div class="form__switch-toggle"></div>
                                                 </button>
                                               </div>
                                             </div>
@@ -1295,7 +1295,7 @@
                                                     name="useDataForInclusion-switch"
                                                     value="true"
                                                   />
-                                                  <div class="_16g1cyy8">
+                                                  <div class="form__switch-toggle-checked">
                                                     <svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
