--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -302,7 +302,7 @@
                                     <div class="_10ejfg4u">
                                       <div style="margin-right: 24px">
                                         <label
-                                          class="_rin72m"
+                                          class="explore-filter-menu__group-size-label"
                                           for="email_removal_whitelist_switch"
                                           ><span
                                             id="email_removal_whitelist_switch--label"
@@ -702,7 +702,7 @@
                                         <div class="_10ejfg4u">
                                           <div style="margin-right: 24px">
                                             <label
-                                              class="_rin72m"
+                                              class="explore-filter-menu__group-size-label"
                                               for="email_removal_whitelist_switch"
                                               ><span
                                                 id="email_removal_whitelist_switch--label"
