--- a/profile.html
+++ b/profile.html
@@ -928,7 +928,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               >
                                                 <div class="_1h4ezu9">
                                                   <label
-                                                    class="_1yw7hpv"
+                                                    class="input-field"
                                                     for="location"
                                                     ><div>Location</div>
                                                     <div dir="ltr">
@@ -1048,7 +1048,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           </div>
                                           <div class="_1ou8uzt">
                                             <div class="_1h4ezu9">
-                                              <label class="_1yw7hpv" for="work"
+                                              <label class="input-field" for="work"
                                                 ><div>Work</div>
                                                 <div dir="ltr">
                                                   <div class="_1sgu3hhe">
@@ -2067,7 +2067,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         >
                                           <div class="_1h4ezu9">
                                             <label
-                                              class="_1yw7hpv"
+                                              class="input-field"
                                               for="location"
                                               ><div>Location</div>
                                               <div dir="ltr">
@@ -2180,7 +2180,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </div>
                                     <div class="_1ou8uzt">
                                       <div class="_1h4ezu9">
-                                        <label class="_1yw7hpv" for="work"
+                                        <label class="input-field" for="work"
                                           ><div>Work</div>
                                           <div dir="ltr">
                                             <div class="_1sgu3hhe">
