--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -281,14 +281,14 @@
                         How much would you like to send to Kuniatsu?
                       </h2>
                       <div>
-                        <div class="_1jj61m9">
+                        <div class="spinner-chart__input-price">
                           <div class="_1uh5xxt">₱</div>
-                          <label class="_1yw7hpv" for="request_amount"
-                            ><div class="_1m2ich98">
-                              <div class="_11hx67x">Amount (PHP)</div>
+                          <label class="input-field" for="request_amount"
+                            ><div class="spinner-chart__input-title">
+                              <div class="spinner-chart__input-title-text">Amount (PHP)</div>
                             </div>
                             <div dir="ltr">
-                              <div class="_fywymp7">
+                              <div class="spinner-chart__input-currency">
                                 <input
                                   class="form__input"
                                   id="request_amount"
