--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1081,7 +1081,7 @@
                             <div class="_9hxttoo">
                               <div style="margin-bottom: 8px">
                                 <label
-                                  class="_rin72m"
+                                  class="explore-filter-menu__group-size-label"
                                   for="experience_default_time"
                                   ><div class="_1p3joamp">
                                     Experience start time
