--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1082,7 +1082,7 @@
                                       class="form-floating__control"
                                       for="data-type-picker-Public groups"
                                       ><div class="form-floating__label">
-                                        <div class="_11hx67x">
+                                        <div class="spinner-chart__input-title-text">
                                           Maximum group size
                                         </div>
                                       </div>
@@ -1145,7 +1145,7 @@
                                       class="form-floating__control"
                                       for="data-type-picker-Private groups"
                                       ><div class="form-floating__label">
-                                        <div class="_11hx67x">
+                                        <div class="spinner-chart__input-title-text">
                                           Maximum group size
                                         </div>
                                       </div>
