--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1279,16 +1279,16 @@
                                 </p>
                               </section>
                               <div class="_1nx485z">
-                                <div class="_1jj61m9">
+                                <div class="spinner-chart__input-price">
                                   <label
-                                    class="_1yw7hpv"
+                                    class="input-field"
                                     for="trip_template_minimum_private_booking_price"
-                                    ><div class="_1m2ich98">
-                                      <div class="_11hx67x">Minimum price</div>
+                                    ><div class="spinner-chart__input-title">
+                                      <div class="spinner-chart__input-title-text">Minimum price</div>
                                     </div>
                                     <div dir="ltr">
-                                      <div class="_fywymp7">
-                                        <div class="_utak6qs">INR</div>
+                                      <div class="spinner-chart__input-currency">
+                                        <div class="spinner-chart__input-currency-text">INR</div>
                                         <input
                                           pattern="\d*"
                                           class="form__input"
@@ -1372,7 +1372,7 @@
                                     type="button"
                                     class="form__switch"
                                   >
-                                    <div class="_vr1ztso"></div>
+                                    <div class="form__switch-toggle"></div>
                                   </button>
                                 </div>
                               </div>
@@ -1425,7 +1425,7 @@
                                     type="button"
                                     class="form__switch"
                                   >
-                                    <div class="_vr1ztso"></div>
+                                    <div class="form__switch-toggle"></div>
                                   </button>
                                 </div>
                               </div>
