--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1112,12 +1112,12 @@
                                   }
                                 </style>
                                 <div class="relative" data-reach-combobox="">
-                                  <div class="_1jj61m9">
+                                  <div class="spinner-chart__input-price">
                                     <label
-                                      class="_1yw7hpv"
+                                      class="input-field"
                                       for="submission_city"
                                       ><div class="_1jn0ze9">
-                                        <div class="_11hx67x">City</div>
+                                        <div class="spinner-chart__input-title-text">City</div>
                                       </div>
                                       <div dir="ltr">
                                         <div class="_js9i23">
@@ -1276,7 +1276,7 @@
                                         type="button"
                                         class="_17z7clia"
                                       >
-                                        <div class="_vr1ztso"></div>
+                                        <div class="form__switch-toggle"></div>
                                       </button>
                                     </div>
                                   </div>
