--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1069,7 +1069,7 @@
                               <div class="_9hxttoo">
                                 <div style="margin-bottom: 8px">
                                   <label
-                                    class="_rin72m"
+                                    class="explore-filter-menu__group-size-label"
                                     for="trip_template_confirmed_booking_lead_hours"
                                     ><div class="_1p3joamp">
                                       Cutoff time for additional guests
@@ -1193,7 +1193,7 @@
                               <div class="_9hxttoo">
                                 <div style="margin-bottom: 8px">
                                   <label
-                                    class="_rin72m"
+                                    class="explore-filter-menu__group-size-label"
                                     for="trip_template_booking_lead_hours"
                                     ><div class="_1p3joamp">
                                       Cutoff time for your first guest
@@ -1298,7 +1298,7 @@
                               <div
                                 style="margin-top: 16px; margin-bottom: 16px"
                               >
-                                <label class="_rin72m" for="rfi_opt_out"
+                                <label class="explore-filter-menu__group-size-label" for="rfi_opt_out"
                                   ><div class="_hgs47m">
                                     <div class="va-top">
                                       <div class="_aaxh23">
