--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1101,15 +1101,15 @@
                                 </p>
                                 <div class="_d747d">
                                   <div class="_1sxghm1">
-                                    <div class="_1jj61m9">
+                                    <div class="spinner-chart__input-price">
                                       <label
-                                        class="_1yw7hpv"
+                                        class="input-field"
                                         for="packing-item-0"
-                                        ><div class="_1m2ich98">
-                                          <div class="_11hx67x">Item</div>
+                                        ><div class="spinner-chart__input-title">
+                                          <div class="spinner-chart__input-title-text">Item</div>
                                         </div>
                                         <div dir="ltr">
-                                          <div class="_fywymp7">
+                                          <div class="spinner-chart__input-currency">
                                             <input
                                               data-testid="packing-item-0"
                                               class="form__input"
@@ -1155,15 +1155,15 @@
                                     </div>
                                   </div>
                                   <div class="_1sxghm1">
-                                    <div class="_1jj61m9">
+                                    <div class="spinner-chart__input-price">
                                       <label
-                                        class="_1yw7hpv"
+                                        class="input-field"
                                         for="packing-item-1"
-                                        ><div class="_1m2ich98">
-                                          <div class="_11hx67x">Item</div>
+                                        ><div class="spinner-chart__input-title">
+                                          <div class="spinner-chart__input-title-text">Item</div>
                                         </div>
                                         <div dir="ltr">
-                                          <div class="_fywymp7">
+                                          <div class="spinner-chart__input-currency">
                                             <input
                                               data-testid="packing-item-1"
                                               class="form__input"
