--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1282,7 +1282,7 @@
                       </g>
                     </svg>
                   </div>
-                  <label class="_1yw7hpv" for="theme-search-input"
+                  <label class="input-field" for="theme-search-input"
                     ><div dir="ltr">
                       <div class="flex">
                         <input
