--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1126,7 +1126,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                       class="form-floating__control"
                                       for="experience_duration"
                                       ><div class="form-floating__label">
-                                        <div class="_11hx67x">Duration</div>
+                                        <div class="spinner-chart__input-title-text">Duration</div>
                                       </div>
                                       <div class="box-border">
                                         <select
