--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4233,7 +4233,7 @@
                             <div class="form-floating">
                               <label class="form-floating__control" for="starts_at"
                                 ><div class="form-floating__label">
-                                  <div class="_11hx67x">Time</div>
+                                  <div class="spinner-chart__input-title-text">Time</div>
                                 </div>
                                 <div class="box-border">
                                   <select
@@ -4427,7 +4427,7 @@
                             <div class="_edsstek">
                               <label class="form-floating__control" for="instance_host_ids"
                                 ><div class="form-floating__label">
-                                  <div class="_11hx67x">Host</div>
+                                  <div class="spinner-chart__input-title-text">Host</div>
                                 </div>
                                 <div class="_14lk9e14">
                                   <select
@@ -4482,7 +4482,7 @@
                             <div class="form-floating">
                               <label class="form-floating__control" for="booking_type"
                                 ><div class="form-floating__label">
-                                  <div class="_11hx67x">Booking type</div>
+                                  <div class="spinner-chart__input-title-text">Booking type</div>
                                 </div>
                                 <div class="box-border">
                                   <select
@@ -4540,14 +4540,14 @@
                           class="_oas64w"
                         >
                           <div style="margin-bottom: 24px">
-                            <div class="_1jj61m9">
-                              <label class="_1yw7hpv" for="price_per_guest"
-                                ><div class="_1m2ich98">
-                                  <div class="_11hx67x">Price per adult</div>
+                            <div class="spinner-chart__input-price">
+                              <label class="input-field" for="price_per_guest"
+                                ><div class="spinner-chart__input-title">
+                                  <div class="spinner-chart__input-title-text">Price per adult</div>
                                 </div>
                                 <div dir="ltr">
-                                  <div class="_fywymp7">
-                                    <div class="_utak6qs">
+                                  <div class="spinner-chart__input-currency">
+                                    <div class="spinner-chart__input-currency-text">
                                       <div class="_j1kt73">₱</div>
                                     </div>
                                     <input
@@ -4569,16 +4569,16 @@
                           class="_oas64w"
                         >
                           <div style="margin-bottom: 24px">
-                            <div class="_1jj61m9">
-                              <label class="_1yw7hpv" for="private_group_price"
-                                ><div class="_1m2ich98">
-                                  <div class="_11hx67x">
+                            <div class="spinner-chart__input-price">
+                              <label class="input-field" for="private_group_price"
+                                ><div class="spinner-chart__input-title">
+                                  <div class="spinner-chart__input-title-text">
                                     Private group price
                                   </div>
                                 </div>
                                 <div dir="ltr">
-                                  <div class="_fywymp7">
-                                    <div class="_utak6qs">
+                                  <div class="spinner-chart__input-currency">
+                                    <div class="spinner-chart__input-currency-text">
                                       <div class="_j1kt73">From ₱</div>
                                     </div>
                                     <input
@@ -4600,13 +4600,13 @@
                           class="_oas64w"
                         >
                           <div class="_18tkw86">
-                            <div class="_1jj61m9">
-                              <label class="_1yw7hpv" for="max_guests"
-                                ><div class="_1m2ich98">
-                                  <div class="_11hx67x">Maximum group size</div>
+                            <div class="spinner-chart__input-price">
+                              <label class="input-field" for="max_guests"
+                                ><div class="spinner-chart__input-title">
+                                  <div class="spinner-chart__input-title-text">Maximum group size</div>
                                 </div>
                                 <div dir="ltr">
-                                  <div class="_fywymp7">
+                                  <div class="spinner-chart__input-currency">
                                     <input
                                       class="form__input"
                                       id="max_guests"
@@ -4629,15 +4629,15 @@
                           class="_oas64w"
                         >
                           <div class="_18tkw86">
-                            <div class="_1jj61m9">
-                              <label class="_1yw7hpv" for="max_private_guests"
-                                ><div class="_1m2ich98">
-                                  <div class="_11hx67x">
+                            <div class="spinner-chart__input-price">
+                              <label class="input-field" for="max_private_guests"
+                                ><div class="spinner-chart__input-title">
+                                  <div class="spinner-chart__input-title-text">
                                     Maximum private group size
                                   </div>
                                 </div>
                                 <div dir="ltr">
-                                  <div class="_fywymp7">
+                                  <div class="spinner-chart__input-currency">
                                     <input
                                       class="form__input"
                                       id="max_private_guests"
@@ -4674,7 +4674,7 @@
                                   for="language_codes_selectdropdown"
                                   class="_13kgb0p"
                                   ><div class="form-floating__label">
-                                    <div class="_11hx67x">Languages</div>
+                                    <div class="spinner-chart__input-title-text">Languages</div>
                                   </div>
                                   <div
                                     class="_1ekxhnk"
@@ -4719,7 +4719,7 @@
                                 class="form-floating__control"
                                 for="last_booking_lead_minutes"
                                 ><div class="form-floating__label">
-                                  <div class="_11hx67x">
+                                  <div class="spinner-chart__input-title-text">
                                     Cutoff time for additional guests
                                   </div>
                                 </div>
@@ -4824,7 +4824,7 @@
                                 class="form-floating__control"
                                 for="first_booking_lead_minutes"
                                 ><div class="form-floating__label">
-                                  <div class="_11hx67x">
+                                  <div class="spinner-chart__input-title-text">
                                     Cutoff time for your first guest
                                   </div>
                                 </div>
@@ -4921,7 +4921,7 @@
                             <div class="form-floating">
                               <label class="form-floating__control" for="frequency"
                                 ><div class="form-floating__label">
-                                  <div class="_11hx67x">Repeat scheduling</div>
+                                  <div class="spinner-chart__input-title-text">Repeat scheduling</div>
                                 </div>
                                 <div class="box-border">
                                   <select
